# engram

./: .gitignore  .tbls.yml  ADVERSARIAL_PROMPTS.md  AGENTS.md  ARCHITECTURE_ASSESSMENT_2026-05-16.md  ARCHITECTURE_EXECUTION_PLAN-GEMINI.md  ARCHITECTURE_RECOMMENDATION_EXECUTION_PLAN_2026-05-16.md  ARCHITECTURE_REMEDIATION_PLAN-GEMINI.md  BRAINSTORM.md  BUILD_PHASES.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESIGN_UI_REWORK_PROMPT.md  CONSENSUS_REVIEW.md  DECISION_LOG.md  ENGRAM_ARCHITECTURE_REVIEW_2026-05-16-GEMINI.md  ENGRAM_SUMMARY_GPT_5_2026-05-19.md  ENGRAM_UI_REWORK_HANDOFF.md  GEMINI.md  GOLD_SET_TEMPLATE.md  HUMAN_REQUIREMENTS.md  Makefile  OPERATOR_REPORT.md  PHASE_1_BUILD_STATUS.md  PHASE_1_REVIEW_FINDINGS.md  PRIOR_ART.md  README.md  REVIEW_claude-opus-4-7.md  ROADMAP.md  SECURITY.md  SOURCE_INGESTION_BACKLOG.md  SPEC.md  STRIATUM_MEMORY_E2E_BACKLOG.md  STRIATUM_MEMORY_ROADMAP.md  SYNTHESIS_PROMPT.md  TODO.md  V1_ARCHITECTURE_DRAFT.md  V1_REVIEW_PROMPT.md  V1_REVIEW_claude-opus-4-7.md  V1_REVIEW_gemini-cli.md  (+8 more)
agent-runner/: .gitignore  Makefile  README.md  engram-mcp-stdio  pyproject.toml
agent-runner/docs/: DECISION_LOG.md  ENGRAM_INCUBATION_CONTEXT.md  INTERVIEW_LOG.md  PRD.md  PRIOR_ART.md  README.md  RFC_0014_DOGFOOD_FIX_SPEC.md  SPEC.md  TODO.md  UBIQUITOUS_LANGUAGE.md
agent-runner/docs/design/: V1_MVP_DESIGN.md  V1_MVP_DESIGN_INPUT_claude.md  V1_MVP_DESIGN_INPUT_codex.md  V1_MVP_DESIGN_INPUT_gemini.md
agent-runner/docs/reviews/v1/: RFC_0014_DOGFOOD_FIX_IMPLEMENTATION.md  RFC_0014_DOGFOOD_FIX_REREVIEW_codex_2026_05_06.md  RFC_0014_DOGFOOD_FIX_REVIEW_codex_2026_05_06.md  RFC_0014_DOGFOOD_RERUN_BLOCKER_codex_2026_05_06.md  V1_MVP_BUILD_REREVIEW_codex_2026_05_06.md  V1_MVP_BUILD_REVIEW.md  V1_MVP_BUILD_REVIEW_claude_2026_05_06.md  V1_MVP_BUILD_REVIEW_codex_2026_05_06.md  V1_MVP_BUILD_REVIEW_gemini_2026_05_06.md  V1_MVP_BUILD_SYNTHESIS.md  V1_MVP_CODEX_BUILD_REVIEW_FIX_SPEC_2026_05_06.md  V1_MVP_DESIGN_REVIEW.md  V1_MVP_FINDINGS_LEDGER.md  V1_MVP_SYNTHESIS.md
agent-runner/docs/rfcs/: 0001-run-recovery-and-dogfood-fixes.md  0002-reviewer-independence-policy.md  0003-support-ledgers-and-evidence-audits.md  0004-critique-to-action-loop.md  0005-harness-meta-optimization.md  README.md
agent-runner/examples/rfc-0014-operational-artifact-home/: workflow.json
agent-runner/examples/rfc-0014-operational-artifact-home/prompts/: final_review.md  findings_ledger.md  review.md  synthesis.md
agent-runner/examples/rfc-0014-operational-artifact-home/roles/: coordinator.md  ledger.md  reviewer.md  synthesizer.md
agent-runner/examples/rfc-ledger-cleanup/: workflow.json
agent-runner/examples/rfc-ledger-cleanup/prompts/: draft.md  final_review.md  findings_ledger.md  review.md  synthesis.md
agent-runner/examples/rfc-ledger-cleanup/roles/: author.md  coordinator.md  ledger.md  reviewer.md  synthesizer.md
agent-runner/prompts/: P001_design_review_build_v1_mvp.md  P002_validate_agent_runner_with_rfc_0014.md  P003_implement_rfc_0014_dogfood_fixes.md  P004_rerun_rfc_0014_dogfood.md
agent-runner/scripts/: agent_runner_tmux_design.sh
agent-runner/src/agent_runner/: __init__.py  artifacts.py  cli.py  db.py  errors.py  identity.py  schema.py  workflow.py
agent-runner/tests/: test_cli_mvp.py
benchmarks/: __init__.py
docs/: AGENT_CONTEXT_NOTES.md  README.md  UBIQUITOUS_LANGUAGE.md  claims_beliefs.md  ingestion.md  segmentation.md
migrations/: 001_raw_evidence.sql  002_capture_reclassification.sql  003_source_kind_claude.sql  004_segments_embeddings.sql  005_source_kind_gemini.sql  006_claims_beliefs.sql  007_claim_audits.sql  008_claim_extractions_request_profile_unique.sql  009_phase4_entities_review.sql  010_gold_labels.sql  README.md  (+14 more)
(+1305 files in other folders)
