[project]
name = "agent-runner"
version = "0.1.0"
description = "Local-first orchestration for terminal-based AI coding agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agent_runner = "agent_runner.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

